--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,15 @@
 html {
 	box-sizing: border-box;
-  background-color: #efefef;
-  margin: 0;
+  background-color: #dbd6d0;
 }
 
 body {
-  font-family: 'Bevan', cursive;
+  margin: 0;
+  font-family: sans-serif;
 }
 
 h1{
+  font-family: "Bevan", cursive;
   text-align: center;
   color: #fff;
 }
@@ -18,19 +19,35 @@ ul {
   list-style-type: none;
   color: #fff;
 }
+
 .info-boxes {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  text-align: center;
 }
 
 .info-boxes li {
-  display: inline-block;
+  display: inline;
   margin: 1 1 1 1;
   padding: 1em;
-  background-color: #000;
-  color: #fff;
+  background-color: #733737;
+  border-radius: 10px;
+  max-width: 20em;
 }
+
+.info-boxes li:hover{
+  background-color: #ff332a;
+}
+
+.info-boxes body{
+  display: block;
+  margin: 0;
+  padding: 0;
+  border-color: #5a5750;
+  background-color: #79766f;
+}
+
 *, *::before, *::after {
 	box-sizing: inherit;
 }
