--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #dbd6d0;
 }
 
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
 }
 
-h1{
+h1 {
   font-family: "Bevan", cursive;
   text-align: center;
   color: #fff;
@@ -28,26 +28,26 @@ ul {
 }
 
 .info-boxes li {
-  display: inline;
-  margin: 1 1 1 1;
+  display: inline-block;
+  margin: .1em;
   padding: 1em;
   background-color: #733737;
-  border-radius: 10px;
+  border-radius: 5px;
   max-width: 20em;
 }
 
-.info-boxes li:hover{
+.info-boxes li:hover {
   background-color: #ff332a;
 }
 
-.info-boxes body{
+header {
   display: block;
   margin: 0;
-  padding: 0;
-  border-color: #5a5750;
+  padding: 2em;
+  border: 3px solid #5a5750;
   background-color: #79766f;
 }
 
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
